apps/cinephage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinephage
  namespace: media
  labels:
    app: cinephage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cinephage
  template:
    metadata:
      labels:
        app: cinephage
    spec:
      containers:
        - name: cinephage
          image: ghcr.io/moldytaint/cinephage:latest@sha256:d4e3e7f0cb3fd368ae58e60a9e9b15791b899d845688633d6c6908532d6742e5
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 2
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
            - mountPath: /qb-downloads
              name: qb-downloads
            - mountPath: /tm-downloads
              name: tm-downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: cinephage-config
        - name: media
          persistentVolumeClaim:
            claimName: plex-media
        - name: qb-downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
        - name: tm-downloads
          persistentVolumeClaim:
            claimName: transmission-downloads
