apps/cinephage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cinephage
  namespace: media
spec:
  selector:
    app: cinephage
  ports:
    - port: 3000
      targetPort: 3000
